A new screen has been added under Advanced Statistics that displays each event that has occurred and allows for the deletion of individual events.