@@ -3,6 +3,22 @@ import Persist
 import SwiftUI
 
 struct SettingsView: View {
+    enum NotificationsAuthorizationState {
+        case unknown
+        case known(UNAuthorizationStatus)
+        case checking
+        case requesting
+
+        var enableSwitch: Bool {
+            switch self {
+            case .unknown, .checking, .requesting:
+                return false
+            case .known:
+                return true
+            }
+        }
+    }
+
     @AppStorage("enabledAdvancedStatistics")
     private var enabledAdvancedStatistics = false
 
@@ -42,6 +58,12 @@ struct SettingsView: View {
     @PersistStorage(persister: .ignoredHostnames)
     private(set) var ignoredHostnames: [String]
 
+    @PersistStorage(persister: .postNotificationWhenRedirecting)
+    private var postNotificationWhenRedirecting: Bool
+
+    @State
+    private var notificationsAuthorizationState: NotificationsAuthorizationState = .unknown
+
     var body: some View {
         List {
             Section(footer: Text("Basic statistics last reset: \(basicStatisticsResetDate?.formatted() ?? "Never").")) {
@@ -79,9 +101,77 @@ struct SettingsView: View {
                     }
                 }
             }
+
+            Section(footer: Text("When enabled Overamped will post a notification when an AMP or Yandex Turbo page is redirected in Safari.")) {
+                Toggle(
+                    isOn: $postNotificationWhenRedirecting,
+                    label: { Text("Post Notification When Redirecting") }
+                )
+                    .disabled(!notificationsAuthorizationState.enableSwitch)
+                    .onChange(of: postNotificationWhenRedirecting) { postNotificationWhenRedirecting in
+                        guard postNotificationWhenRedirecting else { return }
+
+                        switch notificationsAuthorizationState {
+                        case .unknown, .checking, .requesting:
+                            assertionFailure("Invalid state")
+                        case .known(let authorizationStatus):
+                            switch authorizationStatus {
+                            case .denied:
+                                if let appSettings = URL(string: UIApplication.openSettingsURLString), UIApplication.shared.canOpenURL(appSettings) {
+                                    UIApplication.shared.open(appSettings)
+                                }
+                            case .authorized:
+                                break
+                            case .provisional, .notDetermined, .ephemeral:
+                                fallthrough
+                            @unknown default:
+                                self.notificationsAuthorizationState = .requesting
+                                UNUserNotificationCenter.current().requestAuthorization(options: [.alert]) { hasPermissions, error in
+                                    DispatchQueue.main.async {
+                                        self.notificationsAuthorizationState = .known(.authorized)
+                                    }
+
+                                    if let error = error {
+                                        print("Error requesting authorization", error)
+                                    }
+                                }
+                            }
+                        }
+                    }
+            }
+        }
+        .onAppear(perform: {
+            checkNotificationAuthorizationState()
+        })
+        .onReceive(NotificationCenter.default.publisher(for: UIApplication.willEnterForegroundNotification)) { _ in
+            checkNotificationAuthorizationState()
         }
         .background(Color(.systemGroupedBackground))
         .navigationBarTitle("Settings")
+    }
+
+    private func checkNotificationAuthorizationState() {
+        switch notificationsAuthorizationState {
+        case .unknown, .known:
+            notificationsAuthorizationState = .checking
+            UNUserNotificationCenter.current().getNotificationSettings { settings in
+                DispatchQueue.main.async {
+                    withAnimation {
+                        switch settings.authorizationStatus {
+                        case .denied:
+                            postNotificationWhenRedirecting = false
+                        case .authorized, .provisional, .notDetermined, .ephemeral:
+                            break
+                        @unknown default:
+                            break
+                        }
+                        notificationsAuthorizationState = .known(settings.authorizationStatus)
+                    }
+                }
+            }
+        case .checking, .requesting:
+            break
+        }
     }
 }
 
